--- a/layout/layout.xml
+++ b/layout/layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?oxygen RNGSchema=http://www.tei-c.org/release/xml/tei/custom/schema/relaxng/tei_odds.rng" type="xml"?>
+<?oxygen RNGSchema="http://www.tei-c.org/release/xml/tei/custom/schema/relaxng/tei_odds.rng" type="xml"?>
 <TEI xmlns:rng="http://relaxng.org/ns/structure/1.0" xmlns:sch="http://purl.oclc.org/dsdl/schematron" xmlns="http://www.tei-c.org/ns/1.0">
   <teiHeader>
     <fileDesc>
@@ -95,7 +95,7 @@
               </valList>
             </attDef>
             <attDef ident="pageref" usage="opt">
-              <desc>Points to a page element ID in the layout section.</desc>
+              <desc>Points to page element IDs in the layout section.</desc>
               <datatype>
                 <rng:data type="IDREFS"/>
               </datatype>
@@ -116,7 +116,7 @@
               </valList>
             </attDef>
             <attDef ident="systemref" usage="opt">
-              <desc>Points to a page element ID in the layout section.</desc>
+              <desc>Points to system element IDs in the layout section.</desc>
               <datatype>
                 <rng:data type="IDREFS"/>
               </datatype>
